--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
   "type": "module",
   "scripts": {
     "init": "node db.init.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=development NODE_OPTIONS=--experimental-vm-modules npx jest --coverage",
+    "start": "node index.js",
+    "clean": "rm *.log"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.1",
+    "express": "latest",
     "sequelize": "^6.37.5",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
